--- a/brimstone.html
+++ b/brimstone.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/brimstone/brimbg.jpg');
+    background-image: url('brimstone/brimbg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/brimstone/smoke.avif" alt="Sky Smokes">
+                        <img src="brimstone/smoke.avif" alt="Sky Smokes">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/brimstone/skyfire.avif" alt="Incendiary">
+                        <img src="brimstone/skyfire.avif" alt="Incendiary">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/brimstone/stim.avif" alt="Stim Beacon">
+                        <img src="brimstone/stim.avif" alt="Stim Beacon">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/brimstone/ult.avif" alt="Orbital Strike">
+                        <img src="brimstone/ult.avif" alt="Orbital Strike">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/brimstone/smoke.mp4" type="video/mp4">
+                <source id="video-source" src="brimstone/smoke.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "Q - Sky Smokes",
         description: "EQUIP a tactical smoke grenade. FIRE to launch a smokescreen that blocks vision and dampens sound, providing cover for your team or disrupting enemy strategies.",
-        video: "images/brimstone/smoke.mp4",
-        img: "images/brimstone/smoke.png"
+        video: "brimstone/smoke.mp4",
+        img: "brimstone/smoke.png"
     },
     {
         name: "E - Incendiary",
         description: "EQUIP a grenade that creates a fire zone on the ground when thrown. FIRE to launch the grenade, which creates an area of fire that damages anyone inside it.",
-        video: "images/brimstone/skyfire.mp4",
-        img: "images/brimstone/skyfire.png"
+        video: "brimstone/skyfire.mp4",
+        img: "brimstone/skyfire.png"
     },
     {
         name: "C - Stim Beacon",
         description: "EQUIP a Stim Beacon that provides nearby allies with a boost to their fire rate. FIRE to throw the beacon into the desired location, granting a temporary speed boost to those who stand within its radius.",
-        video: "images/brimstone/stim.mp4",
+        video: "brimstone/stim.mp4",
         img: "images/brimstone/stim.png"
     },
     {
         name: "X - Orbital Strike (Ultimate)",
         description: "ACTIVATE to call down a devastating orbital strike that decimates an area. The strike is precise and can clear enemies from key locations, providing major control over the battlefield.",
-        video: "images/brimstone/ult.mp4",
-        img: "images/brimstone/ult.png"
+        video: "brimstone/ult.mp4",
+        img: "brimstone/ult.png"
     }
 ];
 
