--- a/clove.html
+++ b/clove.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/clove/bg.jpg');
+    background-image: url('clove/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -81,23 +81,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/clove/roots.avif" alt="Roots">
+                        <img src="clove/roots.avif" alt="Roots">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/clove/thorn.avif" alt="Thorn Barrage">
+                        <img src="clove/thorn.avif" alt="Thorn Barrage">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/clove/vine.avif" alt="Vine Trap">
+                        <img src="clove/vine.avif" alt="Vine Trap">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/clove/ult.avif" alt="Bloomfield">
+                        <img src="clove/ult.avif" alt="Bloomfield">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/clove/roots.mp4" type="video/mp4">
+                <source id="video-source" src="clove/roots.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -119,26 +119,26 @@ const skillsData = [
     {
         name: "Meddle",
         description: "EQUIP a fragment of immortality essence. FIRE to throw the fragment, which erupts after a short delay and temporarily decays all targets caught inside.",
-        video: "images/clove/roots.mp4",
-        img: "images/clove/roots.png"
+        video: "clove/roots.mp4",
+        img: "clove/roots.png"
     },
     {
         name: "Ruse",
         description: "EQUIP to view the battlefield. FIRE to set the locations where Clove’s clouds will settle. ALT FIRE to confirm, launching clouds that block vision in the chosen areas. Clove can use this ability after death.",
-        video: "images/clove/thorn.mp4",
-        img: "images/clove/thorn.png"
+        video: "clove/thorn.mp4",
+        img: "/clove/thorn.png"
     },
     {
         name: "Pick-Me-Up",
         description: "INSTANTLY absorb the life force of a fallen enemy that Clove damaged or killed, gaining haste and temporary health.",
-        video: "images/clove/vine.mp4",
-        img: "images/clove/vine.png"
+        video: "clove/vine.mp4",
+        img: "clove/vine.png"
     },
     {
         name: "Not Dead",
         description: "After dying, ACTIVATE to resurrect. Once resurrected, Clove must earn a kill or a damaging assist within a set time or they will die.",
-        video: "images/clove/ult.mp4",
-        img: "images/clove/ult.png"
+        video: "clove/ult.mp4",
+        img: "clove/ult.png"
     }
 ];
 
