--- a/home.html
+++ b/home.html
@@ -32,157 +32,151 @@
         <div class="agents-grid">
             <div class="agent">
                 <a href="brimstone.html" target="_blank">
-                    <img src="images/brimstone/brimstone.avif" alt="Brimstone">
+                    <img src="brimstone/brimstone.avif" alt="Brimstone">
                 </a>
                 <div class="agent-name">Brimstone</div>
             </div>
             <div class="agent">
                 <a href="phoenix.html" target="_blank">
-                    <img src="images/phoenix/phoenix.avif" alt="Phoenix">
+                    <img src="phoenix/phoenix.avif" alt="Phoenix">
                 </a>
                 <div class="agent-name">Phoenix</div>
             </div>
             <div class="agent">
                 <a href="sage.html" target="_blank">
-                    <img src="images/sage/sage.avif" alt="Sage">
+                    <img src="sage/sage.avif" alt="Sage">
                 </a>
                 <div class="agent-name">Sage</div>
             </div>
             <div class="agent">
                 <a href="sova.html" target="_blank">
-                    <img src="images/sova/sova.avif" alt="Sova">
+                    <img src="sova/sova.avif" alt="Sova">
                 </a>
                 <div class="agent-name">Sova</div>
             </div>
             <div class="agent">
                 <a href="viper.html" target="_blank">
-                    <img src="images/viper/viper.avif" alt="Viper">
+                    <img src="viper/viper.avif" alt="Viper">
                 </a>
                 <div class="agent-name">Viper</div>
             </div>
             <div class="agent">
                 <a href="cypher.html" target="_blank">
-                    <img src="images/cypher/cypher.avif" alt="Cypher">
+                    <img src="cypher/cypher.avif" alt="Cypher">
                 </a>
                 <div class="agent-name">Cypher</div>
             </div>
             <div class="agent">
                 <a href="reyna.html" target="_blank">
-                    <img src="images/reyna/reyna.avif" alt="Reyna">
+                    <img src="reyna/reyna.avif" alt="Reyna">
                 </a>
                 <div class="agent-name">Reyna</div>
             </div>
             <div class="agent">
                 <a href="killjoy.html" target="_blank">
-                    <img src="images/killjoy/kj.avif" alt="Killjoy">
+                    <img src="killjoy/kj.avif" alt="Killjoy">
                 </a>
                 <div class="agent-name">Killjoy</div>
             </div>
             <div class="agent">
                 <a href="breach.html" target="_blank">
-                    <img src="images/breach/breach.avif" alt="Breach">
+                    <img src="breach/breach.avif" alt="Breach">
                 </a>
                 <div class="agent-name">Breach</div>
             </div>
             <div class="agent">
                 <a href="omen.html" target="_blank">
-                    <img src="images/omen/omen.avif" alt="Omen">
+                    <img src="omen/omen.avif" alt="Omen">
                 </a>
                 <div class="agent-name">Omen</div>
             </div>
             <div class="agent">
                 <a href="jett.html" target="_blank">
-                    <img src="images/jett/jett.avif" alt="Jett">
+                    <img src="jett/jett.avif" alt="Jett">
                 </a>
                 <div class="agent-name">Jett</div>
             </div>
             <div class="agent">
                 <a href="raze.html" target="_blank">
-                    <img src="images/raze/raze.avif" alt="Raze">
-                </a>
-                <div class="agent-name">Raze</div>
-            </div>
-            <div class="agent">
-                <a href="raze.html" target="_blank">
-                    <img src="images/raze/raze.avif" alt="Raze">
+                    <img src="raze/raze.avif" alt="Raze">
                 </a>
                 <div class="agent-name">Raze</div>
             </div>
             <div class="agent">
                 <a href="skye.html" target="_blank">
-                    <img src="images/skye/skye.avif" alt="Skye">
+                    <img src="skye/skye.avif" alt="Skye">
                 </a>
                 <div class="agent-name">Skye</div>
             </div>
             <div class="agent">
                 <a href="yoru.html" target="_blank">
-                    <img src="images/yuro/yuro.avif" alt="Yuro">
+                    <img src="yuro/yuro.avif" alt="Yuro">
                 </a>
                 <div class="agent-name">Yuro</div>
             </div>
             <div class="agent">
                 <a href="astra.html" target="_blank">
-                    <img src="images/astra/astra.avif" alt="Astra">
+                    <img src="astra/astra.avif" alt="Astra">
                 </a>
                 <div class="agent-name">Astra</div>
             </div>
             <div class="agent">
                 <a href="kyo.html" target="_blank">
-                    <img src="images/kyo/kyo.avif" alt="K/yo">
+                    <img src="kyo/kyo.avif" alt="K/yo">
                 </a>
                 <div class="agent-name">K/yo</div>
             </div>
             <div class="agent">
                 <a href="chamber.html" target="_blank">
-                    <img src="images/chamber/chamber.avif" alt="Chamber">
+                    <img src="chamber/chamber.avif" alt="Chamber">
                 </a>
                 <div class="agent-name">Chamber</div>
             </div>
             <div class="agent">
                 <a href="neon.html" target="_blank">
-                    <img src="images/neon/neon.avif" alt="Neon">
+                    <img src="neon/neon.avif" alt="Neon">
                 </a>
                 <div class="agent-name">Neon</div>
             </div>
             <div class="agent">
                 <a href="fade.html" target="_blank">
-                    <img src="images/fade/fade.avif" alt="Fade">
+                    <img src="fade/fade.avif" alt="Fade">
                 </a>
                 <div class="agent-name">Fade</div>
             </div>
             <div class="agent">
                 <a href="harbor.html" target="_blank">
-                    <img src="images/harbor/harbor.avif" alt="Harbor">
+                    <img src="harbor/harbor.avif" alt="Harbor">
                 </a>
                 <div class="agent-name">Harbor</div>
             </div>
             <div class="agent">
                 <a href="gecko.html" target="_blank">
-                    <img src="images/gecko/gecko.avif" alt="Gecko">
+                    <img src="gecko/gecko.avif" alt="Gecko">
                 </a>
                 <div class="agent-name">Gecko</div>
             </div>
             <div class="agent">
                 <a href="deadlock.html" target="_blank">
-                    <img src="images/deadlock/deadlock.avif" alt="Deadlock">
+                    <img src="deadlock/deadlock.avif" alt="Deadlock">
                 </a>
                 <div class="agent-name">Deadlock</div>
             </div>
             <div class="agent">
                 <a href="iso.html" target="_blank">
-                    <img src="images/iso/iso.avif" alt="Iso">
+                    <img src="iso/iso.avif" alt="Iso">
                 </a>
                 <div class="agent-name">Iso</div>
             </div>
             <div class="agent">
                 <a href="clove.html" target="_blank">
-                    <img src="images/clove/clove.avif" alt="Clove">
+                    <img src="clove/clove.avif" alt="Clove">
                 </a>
                 <div class="agent-name">Clove</div>
             </div>
             <div class="agent">
                 <a href="vyse.html" target="_blank">
-                    <img src="images/vyse/vyse.avif" alt="Vyse">
+                    <img src="vyse/vyse.avif" alt="Vyse">
                 </a>
                 <div class="agent-name">Vyse</div>
             </div>
