--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                 </div>
             </nav>
             <div class="bgimg">
-                <video src="images/backgrounds/bg-vd.mp4" muted loop autoplay class="main-video"></video>
+                <video src="backgrounds/bg-vd.mp4" muted loop autoplay class="main-video"></video>
             </div>
             <div class="appnext">
                 <h2><span>Valorant</span> First Person <br>Shooting Game<span> FPS</span></h2>
@@ -61,15 +61,15 @@
 
     <section class="maps-section">
         <div class="maps-gallery">
-            <img src="images/maps/arbys.avif" alt="Map 1">
-            <img src="images/maps/icebox.jpg" alt="Map 2">
-            <img src="images/maps/sunset.jpg" alt="Map 3">
-            <img src="images/maps/lutos.jpg" alt="Map 4">
-            <img src="images/maps/Breeze-Valorant-map.avif" alt="Map 4">
-            <img src="images/maps/split.jpg" alt="Map 4">
-            <img src="images/maps/bind.jpg" alt="Map 4">
-            <img src="images/maps/haven.jpg" alt="Map 4">
-            <img src="images/maps/pearl.avif" alt="Map 4">
+            <img src="maps/arbys.avif" alt="Map 1">
+            <img src="maps/icebox.jpg" alt="Map 2">
+            <img src="maps/sunset.jpg" alt="Map 3">
+            <img src="maps/lutos.jpg" alt="Map 4">
+            <img src="maps/Breeze-Valorant-map.avif" alt="Map 4">
+            <img src="maps/split.jpg" alt="Map 4">
+            <img src="maps/bind.jpg" alt="Map 4">
+            <img src="maps/haven.jpg" alt="Map 4">
+            <img src="maps/pearl.avif" alt="Map 4">
   
         </div>
     </section>
