--- a/about.html
+++ b/about.html
@@ -3,114 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Neko Nook</title>
+    <title>About Me - Valorant</title>
     <link rel="stylesheet" href="about.css">
+    <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
-        <div class="logo">
-            <h2><a href="explore.html">Neko Nook</a></h2>
-        </div>
-    </div>
     <nav>
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="mangazone.html">Read Manga</a></li>
-            <li><a href="sketch.html">Browse and upload artworks</a></li>
-            <li><a href="about.html">Contact Us</a></li>
-        </ul>
+        <div class="logo">
+            <p><i>V</i>alorant</p>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="login.html" class="menu-lnk">Home</a></li>
+                <li><a href="login.html" class="menu-lnk">About</a></li>
+                <li><a href="home.html" class="menu-lnk">Agents</a></li>
+                <li><a href="about.html" class="menu-lnk">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="mainbtn">
+            <button onclick="location.href='login.html'" class="plbtn">Play Now</button>
+        </div>
     </nav>
-
     <div class="container">
-        <video src="image/videos/Teeth [ Amv - Mix ] Anime Mix.mp4" muted loop autoplay class="vid"></video>
-    </div>
+        <header class="header">
+            <h1>About Me</h1>
+            <p>Meet the creator behind this site and my love for Valorant!</p>
+        </header>
 
-    <div class="info">
-        <div class="infos">
-            <h1>About Neko Nook</h1>
-            <p>Discover a unique blend of creativity and popular manga on our platform. <br>At Neko Nook, we offer an exciting collection that includes both original works <br>and beloved manga series from around the world.</p>
-            <h2>What we offer:</h2>
-        </div>
-
-        <hr>
-
-        <div class="infor">
-            <h3>Original Manga Creations:</h3>
-            <p>Explore our exclusive collection of manga crafted by talented creators. <br> From action-packed adventures to heartwarming romances, <br>find fresh and innovative stories that you won’t find anywhere else.</p>
-        </div>
-    
-        <div class="sec">
-            <img src="image/gif/benimaru.gif" alt="Benimaru" class="gif">
-            <img src="image/gif/fireforce.gif" alt="Fire Force" class="gif">
-        </div>
-
-        <div class="infor">
-            <h3>Popular Manga Titles:</h3>
-            <p>Dive into a curated selection of popular manga series. <br>We bring you the latest chapters and fan-favorites, <br> so you can keep up with trending titles and discover new gems.</p>
-        </div>
-
-        <div class="sec reverse">
-            <img src="image/gif/titlejjba.gif" alt="JJBA Title" class="gif">
-            <img src="image/gif/choso.gif" alt="Choso" class="gif">
-        </div>
-
-        <div class="infor">
-            <h3>Seamless Reading Experience:</h3>
-            <p>Enjoy our user-friendly reader designed for comfort. <br>Customize your reading experience with adjustable settings, and read your favorite manga on any device, anytime.</p>
-        </div>
-
-        <div class="sec">
-            <img src="image/gif/reading.gif" alt="Reading" class="gif">
-            <img src="image/gif/browse.gif" alt="Browse" class="gif">
-        </div>
-
-        <div class="infor">
-            <h3>Engage with the Community:</h3>
-            <p>Join our vibrant community of manga lovers. <br>Share your thoughts, participate in discussions, and connect with fellow readers and creators.</p>
-        </div>
-
-        <div class="sec reverse">
-            <img src="image/gif/communicate.gif" alt="Communicate" class="gif">
-            <img src="image/gif/talks.gif" alt="Talks" class="gif">
-        </div>
-
-        <div class="infor">
-            <h3>Stay Updated:</h3>
-            <p>Be the first to know about new uploads and updates. <br>Our site features regular additions to both our original and popular manga collections, <br> ensuring you always have something new to explore.</p>
-        </div>
-
-        <div class="sec">
-            <img src="image/gif/kakyoin.gif" alt="Kakyoin" class="gif">
-            <img src="image/gif/giorno.gif" alt="Giorno" class="gif">
-        </div>
-    </div>
-
-    <div class="owner-info">
-        <h2>About the Owner</h2>
-        <div class="owner-description">
-            <img src="image/essentials/me.jpg" alt="Owner Picture" class="owner-img">
-            <p>Hey, I'm Feyrune also known as Francis, the creator of Neko Nook! I'm a passionate manga and anime enthusiast with a deep love for storytelling. My goal is to create a platform where manga fans can come together to explore, discuss, and enjoy everything anime and manga. When I'm not busy curating new content or reading manga, you can find me watching anime, drawing, or trying to learn new languages. I hope you enjoy your stay here at Neko Nook!</p>
-        </div>
-    </div>
-
-    <footer>
-        <div class="footer-cntr">
-            <div class="footer-content">
-                <h3>Contact Us</h3>
-                <p>Email: feyerune@gmail.com</p>
-                <p>Phone: 0912345678969</p>
-                <p>Address: Osaka, Japan, 2nd Floor</p>
+        <section class="about-owner">
+            <div class="owner-text">
+                <h2>Hi, I'm Jasmine!</h2>
+                <p>I’m a huge fan of Valorant and wanted to create a space where fellow players can connect and explore the game. I spend countless hours playing, strategizing, and learning new techniques. Here, I share my experiences and all the cool things I love about the game!</p>
             </div>
-            <div class="footer-content">
-                <h3>Quick Links</h3>
-                <ul class="list">
-                    <li><a href="login.html">Home</a></li>
-                    <li><a href="mangazone.html">Read Manga</a></li>
-                    <li><a href="sketch.html">Browse Artworks</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
+            <div class="owner-image">
+                <img src="/backgrounds/me.jpg" alt="Owner Image">
             </div>
-        </div>
-    </footer>
+        </section>
+
+        <section class="about-valorant">
+            <h2>All About Valorant</h2>
+            <p>Valorant is a tactical first-person shooter developed by Riot Games. It combines precise gunplay with strategic team-based gameplay. Each agent has unique abilities, which makes every match a new challenge!</p>
+        </section>
+
+        <section class="image-gallery">
+            <h2>My Valorant Moments</h2>
+            <div class="gallery">
+                <div class="image-item">
+                    <img src="backgrounds/bgbg.jpg" alt="Valorant Game 1">
+                </div>
+                <div class="image-item">
+                    <img src="backgrounds/co.jpg" alt="Valorant Game 2">
+                </div>
+                <div class="image-item">
+                    <img src="backgrounds/bg.jpg" alt="Valorant Game 3">
+                </div>
+            </div>
+        </section>
+
+        <section class="contact-info">
+            <h2>Contact Me</h2>
+            <p>If you want to connect with me, feel free to reach out via the following platforms:</p>
+            <div class="social-links">
+                <a href="https://facebook.com/yourprofile" target="_blank" class="social-link facebook">Facebook</a>
+                <a href="https://instagram.com/yourprofile" target="_blank" class="social-link instagram">Instagram</a>
+                <a href="https://discord.com/users/yourdiscordid" target="_blank" class="social-link discord">Discord</a>
+            </div>
+        </section>
+    </div>
 </body>
+<footer>
+    <p>Made with ❤️ by Hriee Minn</p>
+</footer>
 </html>
