--- a/vyse.html
+++ b/vyse.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/vyse/bg.jpg');
+    background-image: url('vyse/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -81,23 +81,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/vyse/forcepush.avif" alt="Force Push">
+                        <img src="vyse/forcepush.avif" alt="Force Push">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/vyse/gravshift.avif" alt="Gravitational Shift">
+                        <img src="vyse/gravshift.avif" alt="Gravitational Shift">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/vyse/impulse.avif" alt="Kinetic Impulse">
+                        <img src="vyse/impluse.avif" alt="Kinetic Impulse">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/vyse/ult.avif" alt="Vortex Storm">
+                        <img src="vyse/ult.avif" alt="Vortex Storm">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/vyse/forcepush.mp4" type="video/mp4">
+                <source id="video-source" src="vyse/forcepush.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -119,26 +119,26 @@ const skillsData = [
     {
         name: "Shear",
         description: "EQUIP filaments of liquid metal. FIRE to place a hidden wall trap. When an enemy crosses, an indestructible wall bursts from the ground behind them. The wall lasts for a brief time before dissipating",
-        video: "images/vyse/forcepush.mp4",
-        img: "images/vyse/forcepush.png"
+        video: "vyse/forcepush.mp4",
+        img: "vyse/forcepush.png"
     },
     {
         name: "Arc Rose",
         description: "EQUIP an Arc Rose. Target a surface and FIRE to place a stealthed Arc Rose, or ALT Fire to place the Arc Rose through it. REUSE to blind all players looking at it. This ability can be picked up to be REDEPLOYED.",
-        video: "images/vyse/gravshift.mp4",
-        img: "images/vyse/gravshift.png"
+        video: "vyse/gravshift.mp4",
+        img: "vyse/gravshift.png"
     },
     {
         name: "Razor Vine",
         description: "EQUIP a nest of liquid metal. FIRE to launch. Upon landing, the nest becomes invisible. When ACTIVATED, it sprawls out into a large razorvine nest which slows and damages all players who move through it.",
-        video: "images/vyse/impulse.mp4",
-        img: "images/vyse/impulse.png"
+        video: "vyseimpulse.mp4",
+        img: "vyse/impulse.avif"
     },
     {
         name: "Steel Garden",
         description: "EQUIP a bramble of liquid metal. FIRE to send the metal erupting from you as a torrent of metal thorns, JAMMING enemy primary weapons after a brief windup.",
-        video: "images/vyse/ult.mp4",
-        img: "images/vyse/ult.png"
+        video: "vyse/ult.mp4",
+        img: "vyse/ult.png"
     }
 ];
 
